--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,18 +1,8 @@
 {
-    "compilerOptions": {
-        "target": "es2016",
-        "module": "commonjs",
-        "outDir": "./dist",
-        "rootDir": "./src",
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
-    },
-    "include": [
-        "src/**/*"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+  "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./backend",
+    "module": "commonjs",
+    "target": "ES6"
+  }
 }
