--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,13 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./backend",
+    "target": "ES6",
     "module": "commonjs",
-    "target": "ES6"
-  }
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
+  },
+  "include": ["src"]
 }
